--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-yaml": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
